[gd_scene load_steps=7 format=2]

[ext_resource path="res://Souvenir-Bold.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Purchasing.gd" type="Script" id=2]
[ext_resource path="res://Base.tres" type="Theme" id=3]
[ext_resource path="res://TitleFont.tres" type="DynamicFont" id=4]

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 20
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Scene" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 768.0
theme = ExtResource( 3 )
color = Color( 1, 0.870588, 0.52549, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 672.0
margin_top = 194.0
margin_right = 800.0
margin_bottom = 402.0
rect_pivot_offset = Vector2( 64, 152 )
size_flags_horizontal = 2
size_flags_vertical = 2
alignment = 1

[node name="SpamBuyButton" type="Button" parent="VBoxContainer"]
margin_right = 128.0
margin_bottom = 20.0
size_flags_vertical = 2
text = "Buy"
icon_align = 1

[node name="NoriBuyButton" type="Button" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 128.0
margin_bottom = 62.0
size_flags_vertical = 2
text = "Buy"
icon_align = 1

[node name="RiceBuyButton" type="Button" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 128.0
margin_bottom = 104.0
size_flags_vertical = 2
text = "Buy"
icon_align = 1

[node name="PlasticBuyButton" type="Button" parent="VBoxContainer"]
margin_top = 127.0
margin_right = 128.0
margin_bottom = 147.0
size_flags_vertical = 2
text = "Buy"
icon_align = 1

[node name="PosterBuyButton" type="Button" parent="VBoxContainer"]
margin_top = 169.0
margin_right = 128.0
margin_bottom = 189.0
size_flags_vertical = 2
text = "Buy"
icon_align = 1

[node name="ItemCountContainer" type="VBoxContainer" parent="."]
margin_left = 432.0
margin_top = 188.0
margin_right = 656.0
margin_bottom = 399.0
rect_pivot_offset = Vector2( 64, 152 )

[node name="SpamCountLabel" type="Label" parent="ItemCountContainer"]
margin_right = 22.0
margin_bottom = 39.0
rect_pivot_offset = Vector2( 136, 184 )
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.0745098, 0.0588235, 0.607843, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="NoriCountLabel" type="Label" parent="ItemCountContainer"]
margin_top = 43.0
margin_right = 224.0
margin_bottom = 82.0
rect_pivot_offset = Vector2( 136, 184 )
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.0745098, 0.0588235, 0.607843, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="RiceCountLabel" type="Label" parent="ItemCountContainer"]
margin_top = 86.0
margin_right = 224.0
margin_bottom = 125.0
rect_pivot_offset = Vector2( 136, 184 )
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.0745098, 0.0588235, 0.607843, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="PlasticCountLabel" type="Label" parent="ItemCountContainer"]
margin_top = 129.0
margin_right = 224.0
margin_bottom = 168.0
rect_pivot_offset = Vector2( 136, 184 )
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.0745098, 0.0588235, 0.607843, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="PosterCountLabel" type="Label" parent="ItemCountContainer"]
margin_top = 172.0
margin_right = 224.0
margin_bottom = 211.0
rect_pivot_offset = Vector2( 136, 184 )
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.0745098, 0.0588235, 0.607843, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="Title" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 100.0
input_pass_on_modal_close_click = false
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Store"
align = 1
valign = 1

[node name="Day" type="Label" parent="."]
margin_left = -1.0
margin_top = 652.0
margin_right = 194.0
margin_bottom = 752.0
rect_pivot_offset = Vector2( 173, 57 )
input_pass_on_modal_close_click = false
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "day 1 / 30"
align = 1
valign = 1

[node name="Balance" type="Label" parent="."]
margin_left = 416.0
margin_top = 652.0
margin_right = 611.0
margin_bottom = 752.0
rect_pivot_offset = Vector2( 173, 57 )
input_pass_on_modal_close_click = false
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="Temperature" type="Label" parent="."]
margin_left = 826.0
margin_top = 683.0
margin_right = 974.0
margin_bottom = 717.0
rect_pivot_offset = Vector2( 74, 28 )
input_pass_on_modal_close_click = false
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "temperature"
align = 1
valign = 1

[node name="Weather" type="Label" parent="."]
margin_left = 826.0
margin_top = 715.0
margin_right = 974.0
margin_bottom = 749.0
rect_pivot_offset = Vector2( 74, 28 )
input_pass_on_modal_close_click = false
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "temperature"
align = 1
valign = 1

[node name="ItemLabels" type="Label" parent="."]
margin_left = 200.0
margin_top = 184.0
margin_right = 407.0
margin_bottom = 403.0
rect_pivot_offset = Vector2( 136, 184 )
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.0745098, 0.0588235, 0.607843, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Spam:
Nori:
Rice:
Plastic wrap:
Posters:"

[node name="ContinueButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 397.0
margin_top = 552.0
margin_right = 629.0
margin_bottom = 608.0
text = "Continue"

[connection signal="pressed" from="VBoxContainer/SpamBuyButton" to="." method="_on_SpamBuyButton_pressed"]
[connection signal="pressed" from="VBoxContainer/NoriBuyButton" to="." method="_on_NoriBuyButton_pressed"]
[connection signal="pressed" from="VBoxContainer/RiceBuyButton" to="." method="_on_RiceBuyButton_pressed"]
[connection signal="pressed" from="VBoxContainer/PlasticBuyButton" to="." method="_on_PlasticBuyButton_pressed"]
[connection signal="pressed" from="VBoxContainer/PosterBuyButton" to="." method="_on_PosterBuyButton_pressed"]
[connection signal="pressed" from="ContinueButton" to="." method="_on_ContinueButton_pressed"]
